@@ -1,2 +1,2 @@
-Api is working again!
-- Hey everyone, Thank you everyone for your patience! Api is back up and faster then ever. Today I made some setting changes for Content Format and Preferred Audio, Pls Test that for me and if you guys encounter audio errors, pls report to github. Thank you
+9anime has been added!
+- Hey everyone, we have added the most complicated provider 9anime, Huge thanks to the Consumet Team for adding 9anime and we hope you all enjoy.
